--- a/board/WebContent/WEB-INF/web.xml
+++ b/board/WebContent/WEB-INF/web.xml
@@ -14,7 +14,7 @@
   	
   	<servlet-name>ControllerAction</servlet-name>
   	
-  	<url-pattern>/</url-pattern>
+  	<url-pattern>*.do</url-pattern>
   	
   </servlet-mapping>
 </web-app>
